tests/ui/consts/precise-drop-nested-deref-ice.stderr
error[E0493]: destructor of `Box<&Foo>` cannot be evaluated at compile-time
  --> $DIR/precise-drop-nested-deref-ice.rs:9:18
   |
LL |     const fn get(self: Box<&Self>, f: &u32) -> u32 {
   |                  ^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
